--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -4,7 +4,7 @@
 
 #home_page h1 {
     width: 100%;
-    font-size: 3em;
+    font-size: 6em;
     text-align: center;
     font-family: sans-serif;
 }
@@ -22,7 +22,26 @@
     background-color: #f7f7f9;
     font-size: 1.3em;
     border-radius: 10px;
+    transition: 0.4s;
+    display: flex;
 }
 #home_page .big_btn a:hover {
     background-color: #f1f1f1;
 }
+.dark #home_page .big_btn a {
+    background-color: #2d2d2d;
+}
+.dark #home_page .big_btn a:hover {
+    background-color: #1f1f1f;
+}
+
+
+@media screen and (max-width: 900px) {
+    #big_btn_wrapper {
+        flex-direction: column;
+    }
+    #big_btn_wrapper > div {
+        margin: 2em 0;
+    }
+}
+
